@@ -1422,11 +1422,9 @@ timer_thread_sleep(rb_global_vm_lock_t* unused)
 #endif /* USE_SLEEPY_TIMER_THREAD */
 
 #if defined(__linux__) && defined(PR_SET_NAME)
+# undef SET_THREAD_NAME
 # define SET_THREAD_NAME(name) prctl(PR_SET_NAME, name)
-#elif defined(HAVE_PTHREAD_SETNAME_NP)
-/* pthread_setname_np() on Darwin does not have target thread argument */
-# define SET_THREAD_NAME(name) pthread_setname_np(name)
-#else
+#elif !defined(SET_THREAD_NAME)
 # define SET_THREAD_NAME(name) (void)0
 #endif
 
